fixed misalignment on postcode error message

--- a/service-front/assets/sass/patterns/_form-popup.scss
+++ b/service-front/assets/sass/patterns/_form-popup.scss
@@ -156,6 +156,13 @@
     .postcodelookup {
         position: relative;
 
+        .error-message {
+            @include media(tablet) {
+                left: 0;
+                width: 100%;
+            }
+        }
+
         .spinner {
             @include media(tablet) {
                 position: absolute;
